resolving layout issue

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -38,9 +38,7 @@ code,
 del,
 dfn,
 em,
-img{
-  max-width: 100%;
-  },
+img,
 ins,
 kbd,
 q,
